Ticket #14884 (closed defect: fixed)

Opened 6 months ago

Last modified 5 months ago

wxOSX-Cocoa: DnD broken for custom data object types

Reported by: robind Owned by: csomor
Priority: normal Milestone:
Component: wxOSX-Cocoa Version: 2.9-svn
Keywords: DnD CustomDataObject Cc: artlogic@…
Blocked By: Patch: no
Blocking:

Description

This can be seen with the C++ dnd sample. Create 2 shape frames with Cmd-N, create a shape in one of them and try dragging it to the other. None of the drop target methods (OnEnter, OnDragOver, OnDrop, etc.) are called and the result from DoDragDrop is as if nothing has happened. In other words, as if the drop happened on some window that doesn't support the data type.

The dnd sample uses a class derived from wxDataObject. A similar wxPython demo uses a class derived from wxCustomDataObject with similar results. It acts as if OSX is not sensing that the source and target data objects are the same type.

See #13874

Attachments

osx-customformat-dnd.patch download (0.6 KB) - added by robind 5 months ago.

Change History

  Changed 6 months ago by robind

I should also mention that if the wxDataFormat is changed from using a format name to using one of the stock format IDs then the drop target starts recognizing the incoming data object, at least in the Python sample.

  Changed 6 months ago by csomor

  • owner set to csomor
  • status changed from new to accepted

thanks for tracking this down

follow-up: ↓ 5   Changed 6 months ago by artlogic

Robin - I created a test using a wxTextDataObject and wxTextDropTarget on a wxListBox using stock wxPython 2.9.4.0 and still didn't have any luck. Were you testing against SVN, or am I missing an important detail?

  Changed 6 months ago by artlogic

Robin - once I managed to get SVN to build, my test did work. Thanks again for your help.

in reply to: ↑ 3 ; follow-up: ↓ 7   Changed 5 months ago by robind

Replying to artlogic:

Robin - I created a test using a wxTextDataObject and wxTextDropTarget on a wxListBox using stock wxPython 2.9.4.0 and still didn't have any luck. Were you testing against SVN, or am I missing an important detail?

Just to be clear, the ticket dealing with using a wx.TextCtrl as a drop target is #13874. This one is about DnDs using a custom data format not working.

  Changed 5 months ago by robind

Stefan,

Is the attached patch the proper fix for this issue?

Changed 5 months ago by robind

in reply to: ↑ 5   Changed 5 months ago by artlogic

  • cc artlogic@… added

Replying to robind:

Just to be clear, the ticket dealing with using a wx.TextCtrl as a drop target is #13874. This one is about DnDs using a custom data format not working.

I do understand - I just mentioned the wxListBox so the issue wouldn't be confused. I was primarily testing to make sure that using a wxTextDataObject and wxTextDropTarget worked, and it does - against SVN. In 2.9.4, even non-custom data types weren't working for me.

  Changed 5 months ago by csomor

this looks fine Robin, goes along the line for the clipboard, I think we should extend the format string however, to make sure it really is a private data, I'll check

  Changed 5 months ago by SC

  • status changed from accepted to closed
  • resolution set to fixed

(In [73191]) supporting private types in DnD on osx_cocoa, fixes #14884

  Changed 5 months ago by csomor

extending the format string is not a good idea, as we'd loose the option of supporting arbitrary type identifiers, I'll leave that then...

Note: See TracTickets for help on using tickets.