supporting private types in DnD on osx_cocoa, fixes #14884

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73191 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775